<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Login"
    android:layout_width="match_parent"
    style="@style/SCREEN"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp"
    tools:context="com.belajar.anew.ui.login.LoginActivity">


    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Login"
        style="@style/TEXT"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="10dp"
        android:text="@string/Email"
        style="@style/TEXT"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:hint="@string/Email"
        style="@style/EDITTEXT"
        android:minHeight="48dp"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="10dp"
        android:text="@string/Password"
        style="@style/TEXT"
        android:textSize="22sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:hint="@string/Password"
        style="@style/EDITTEXT"
        android:minHeight="48dp"
        android:textSize="22sp"
        />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/Submit"
        style="@style/BUTTON"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp" />


</LinearLayout>